# estacionamiento-inacap

./: .gitignore  README.md  a.py  db.sqlite3  requirements.txt  simulator.py
backend/: example.env  pyproject.toml
backend/car/: admin.py  filters.py  logics.py  models.py  serializers.py  urls.py  views.py
backend/car/migrations/: 0001_initial.py  0002_alter_carregister_code.py  0003_alter_car_options_alter_carregister_options.py  0004_alter_car_options_alter_carregister_options.py
backend/estacionamiento/: asgi.py  settings.py  urls.py
backend/order/: filters.py  logics.py  models.py  serializers.py  urls.py  views.py
backend/order/migrations/: 0002_remove_order_payment_url_order_payment_id.py
car/: filters.py  serializers.py  urls.py  views.py
estacionamiento/: settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/api/: order.js
frontend/src/components/: get_order.vue
frontend/src/components/order/: correct.astro  error.astro
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
frontend/src/pages/order/: [order].astro
order/: logics.py  models.py  views.py
order/migrations/: 0001_initial.py
template/views/order/: payment_cancel.html  payment_failed.html  payment_form.html  payment_invalid.html
